# lplusplus

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Doc.md  ImprovementKiro.md  LICENSE  LPP_Comprehensive_Report.md  README.md  improvementcodex.md  index.html  install.ps1  install.sh  lpp  lpp.bat  lpp_runtime.c  lpp_runtime.c.orig  lpp_runtime.c.rej  rule3_demo.lpp  run.ps1  run.sh  surprise.lpp
.github/: pull_request_template.md
benchmarks/: Benchmarks.md  Test.lpp  bench.lpp  bench.rs  bench_branch.lpp  bench_calls.lpp  bench_fib.c  bench_fib.lpp  bench_function_heavy.lpp  bench_loop.lpp  bench_pillars.lpp  bench_pillars.rs  bench_struct_list.lpp  generate_benchmark.py  generate_benchmark_pillars.py  results.md  run_all.py
documentation/: CURRENT_CAPABILITIES.md  C_Speed_Project.md  Compiler_Reality.md  Cranelift_Ownership_Audit_2026-07-19.md  Cranelift_Safety_Plan.md  MacOS_Native_Toolchain.md  Native_Linker_Roadmap.md  Networking.md  README.md  Rust_Network_Runtime_Design.md  Safety_Mission.md  Usage.md  Windows_Native_Toolchain.md
examples/: calc.lpp  calculator.lpp  control_flow_demo.lpp  escape_demo.lpp  io_demo.lpp  network_echo_client.lpp  network_echo_server.c  network_echo_server.lpp  network_stress_test.c  network_stress_test.lpp  sdl2_window.lpp  test_new_builtins.c  test_new_builtins.lpp
githubpage/: registry.json
linguist/: UPSTREAM_LINGUIST_PR.md
my_test_project/: .gitignore  lpp.toml
pm/: lpp.toml
runtime/lpp-net/: Cargo.toml  README.md
runtime/lpp-net/include/: lpp_net_runtime.h
runtime/lpp-net/src/: lib.rs
src/: pm.rs  (+3 more)
(+291 files in other folders)
