[package]
name = "lpp"
version = "3.0.0"
edition = "2024"

[[bin]]
name = "lpp"
path = "src/main.rs"

[[bin]]
name = "lpp-link"
path = "src/bin/lpp-link.rs"

[[bin]]
name = "lpp-bench"
path = "src/bin/lpp-bench.rs"

[dependencies]
cranelift-codegen = { version = "0.113", features = ["x86", "all-arch"] }
cranelift-frontend = "0.113"
cranelift-module = "0.113"
cranelift-object = "0.113"
target-lexicon = "0.12"
object = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
